<resources>
    <string name="app_name">TeCuido</string>
    <string name="tvList">Elija la lista que desee visualizar o editar</string>
    <string name="title_activity_medicacion">Medicación</string>
    <string name="title_activity_farmacia">Farmacia</string>
    <string name="rellenar">Rellene los campos necesarios para usted</string>
    <string name="tvmedicacion">Nombre del medicamento :</string>
    <string name="dosis">Dosis :</string>
    <string name="hora">Seleccione la hora a la cual tomarla</string>
    <string name="tvseleccion">¿Necesita receta/tarjeta sanitaria para comprarlo?</string>
    <string name="notificacion">¿Desea que se le envie una notificación?</string>
    <string name="tipoEnfer">Nombre de la discapacidad/enfermedad</string>
    <string name="centro_salud">Nombre del centro de salud</string>
    <string name="curas">¿Se tiene que realizar curas o tratamientos periódicos?</string>

</resources>
