<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBEBF3"
    tools:context=".activity.AddInfoActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="32dp"
        android:text="@string/rellenar"
        android:textColor="#46494A"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvmedicacion" />

        <EditText
            android:id="@+id/etmedicamento"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="360dp"
        android:layout_height="342dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btHora"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#77BCD1"
                android:textColor="#CAE1E8"
                android:onClick="hora"
                android:text="Hora" />

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvseleccion" />

        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SI"
                android:textColor="#46494A"/>

            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NO"
                android:textColor="#46494A"/>

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notificacion" />

        <RadioGroup
            android:id="@+id/rgnotificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbNotificacionS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SI"
                android:textColor="#46494A"/>

            <RadioButton
                android:id="@+id/rbNotificacionN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NO"
                android:textColor="#46494A"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Observaciones" />

        <EditText
            android:id="@+id/etObservaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="289dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="35dp"
        android:onClick="guardar"
        android:text="Guardar"
        android:backgroundTint="#77BCD1"
        android:textColor="#CAE1E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="360dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dosis" />

        <EditText
            android:id="@+id/etDosis"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>